add stopwatch and integarte statistics with parameters
