# api_backend_server/web_app/openapi.yaml
@@ -296,6 +296,18 @@ paths:
           schema:
             type: boolean
           required: false
+        - in: query
+          name: start_range
+          description: Parameter to specify the start date of the calculation
+          schema:
+            type: string
+          required: false
+        - in: query
+          name: end_range
+          description: Parameter to specify the end date of the calculation
+          schema:
+            type: string
+          required: false
       responses:
         '200':
           description: Returns a rolling Work-Duties-Leisure meter
@@ -303,6 +315,25 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/wdl_meter"
+  /api/statistics/oldest:
+    get:
+      tags:
+        - statistics
+      summary: Get the oldest activity start date for a user
+      operationId: apis.statistics.get_oldest_date
+      security:
+        - jwt: ['user']
+      responses:
+        '200':
+          description: Returns the oldest activity start date for a user in ISO-8601 UTC
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  oldest_date:
+                    type: string
+                    example: "2020-03-15T15:27:44,098807487+00:00"
   /api/categories:
     get:
       tags:
